--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2018"
 actix = "0.7.9"
 actix-web="0.7.18"
 chrono = "0.4.6"
+config = "0.9.2"
 diesel = { version = "1.4", features = ["postgres", "r2d2"] }
 dotenv = "0.13.0"
 env_logger = "0.6.0"
 failure = "0.1.5"
 futures = "0.1"
 r2d2 = "0.8.3"
-serde_derive = "1.0.88"
-serde = "1.0.88"
+serde = {version = "1.0.88", features = ["derive"]}
 
 [profile.release]
 lto=true
