--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ actix = "0.7.9"
 actix-web="0.7.18"
 chrono = "0.4.6"
 config = "0.9.2"
-diesel = { version = "1.4", features = ["postgres", "r2d2"] }
+diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
 dotenv = "0.13.0"
 env_logger = "0.6.0"
 failure = "0.1.5"
