--- a/assets/blog-server-config.ini
+++ b/assets/blog-server-config.ini
@@ -1,2 +1,3 @@
-DATABASE_URL = "postgres://postgres:postgres@localhost/develop"
+;DATABASE_URL = "postgres://postgres:postgres@localhost/develop"
+DATABASE_URL = "blog.sqlite"
 SERVER_URL = "127.0.0.1:3000"
