--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ opt-level= 3
 [package.metadata.deb]
 maintainer = "Harry Gill <tech@gill.net.in>"
 copyright = "2019, Harry Gill"
-depends = "$auto, systemd"
+depends = "systemd"
 conf-files = ["/usr/local/etc/blog-server-config.ini", "/etc/systemd/system/blog-server.service"]
 extended-description = """\
 static blog server for serving likes and comments for posts.\
