--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 license = "LGPL-3.0-or-later"
 
 [dependencies]
-actix-web="4.4"
+actix-web="4.5"
 chrono = "0.4"
-clap = { version = "4.4", features = ["derive"] }
+clap = { version = "4.5", features = ["derive","env"] }
 diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
 diesel_migrations = { version= "2.1", features = ["sqlite"]}
 serde = { version = "1.0", features = ["derive"]}
